# app/Http/Controllers/Api/CertificatesController.php
@@ -86,4 +86,80 @@ class CertificatesController extends Controller
         $certificate = Certificate::create($request->all());
         return $this->successResponse($certificate);
     }
+
+    /**
+     * @OA\Put(
+     *     path="/certificates/{id}",
+     *     summary="Modifiy Certificates",
+     *     tags={"Certificates"},
+     *
+     *     @OA\Parameter(
+     *          name="id",
+     *          description="Certificate ID",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="course_id",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="certificate_date",
+     *                     type="date"
+     *                 ),
+     *                 example={"course_id": "1", "name": "Jhon Doe", "certificate_date": "2021-11-29"}
+     *             )
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *     ),
+     *
+     *     @OA\Response(
+     *         response="400",
+     *         description="Failed",
+     *     ),
+     *
+     *     deprecated=false
+     * )
+     */
+    public function update(Request $request, $id)
+    {
+        try {
+            $validator = Validator::make($request->all(), Certificate::rules(true));
+
+            if ($validator->fails()) {
+                return $this->errorResponse($validator->errors()->first(), 400);
+            }
+
+            $certificate = Certificate::find($id);
+            $certificate->course_id = $request->get('course_id');
+            $certificate->name = $request->get('name');
+            $certificate->certificate_date = $request->get('certificate_date');
+            $certificate->update();
+
+        } catch (\Exception $exception) {
+            return $this->errorResponse($exception->getMessage(), 400);
+        }
+
+        return $this->successResponse([
+            'status' => 200,
+            'message' => 'Updated Successfully'
+        ]);
+    }
 }
