# routes/api.php
@@ -21,3 +21,4 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
 
 Route::get('certificates', [CertificatesController::class, 'list']);
 Route::post('certificates', [CertificatesController::class, 'store']);
+Route::put('certificates/{id}', [CertificatesController::class, 'update']);
